revises a background positioning bug in Gecko that undesirably shifts the footer glyphs on the blog articles’ footer

--- a/frontend/ui/arboreal.styles/_arboreal.style.pages.blog.scss
+++ b/frontend/ui/arboreal.styles/_arboreal.style.pages.blog.scss
@@ -672,14 +672,14 @@
 		
 		
 		
-		
+			
 		@include typeSansSerifNeoContextual;
 		@include text(18px, 27px, rgb(89, 89, 89));
 		
 		p {
 		
 			@include text(18px, 31.5px, rgb(64, 64, 64));
-			
+				
 			+ p {
 			
 				margin-top: 0.5em;
@@ -853,7 +853,7 @@
 			
 				@include inlineBlock;
 				
-				background-position: top left;
+				background-position: center left;
 				background-position-y: 9px;
 				
 				background-repeat: no-repeat;
